Fix the footer links spacing issue

--- a/src/scss/common/footer.scss
+++ b/src/scss/common/footer.scss
@@ -44,6 +44,7 @@
   .footerLink {
     font-family: $footer-text-font;
     font-size: 16px;
+    margin-right: 1.5rem;
   }
 
   .logo-col {
